# Ceres

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  README.md
src/App/: AppDelegate.cpp  AppDelegate.h  Configurator.cpp  Configurator.h  Main.cpp
tools/: gen_mac_dev_xcode_debug.command  gen_mac_xcode.command  gen_mac_xcode_clang_debug.command  gen_win_msvc.cmd  gen_win_vs_msvc.cmd
